Fixed z-index.

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ header {
   left: 0;
   right: 0;
   text-align: center;
-  z-index: 10;
+  z-index: 11;
   animation-name: dropHeader;
   animation-iteration-count: 1;
   animation-timing-function: ease;
